--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 
-asgiref             3.2.5  
-Django              3.0.4  
-djangorestframework 3.11.0 
-Pillow              7.0.0  
-pip                 20.0.2 
-pytz                2019.3 
-setuptools          46.0.0 
-sqlparse            0.3.1  
-wheel               0.34.2 
+asgiref==3.2.5  
+Django==3.0.4  
+djangorestframework==3.11.0 
+Pillow==7.0.0  
+pip==20.0.2 
+pytz==2019.3 
+setuptools==46.0.0 
+sqlparse==0.3.1  
+wheel==0.34.2 
